kubernetes/app-deployment.yaml
#NextJS deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nestjs-app
  labels:
    app: nestjs-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nestjs-app
  template:
    metadata:
      labels:
        app: nestjs-app

        prometheus.io/scrape: "true" #access for prometheus to get metrics
        prometheus.io/port: "3000"
        prometheus.io/path: "/redis"
    spec:
      #no root
      securityContext:
        runAsNonRoot: true #container has no root rights
        runAsUser: 1001
        runAsGroup: 1001
      containers:
        - name: nestjs-app
          image: quixx21/devops-test:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"

          #Health checks
          livenessProbe:
            httpGet:
              path: /redis
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 15
            timeoutSeconds: 3
            failureThreshold: 5


          readinessProbe:       #ready check
            httpGet:
              path: /redis
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          #security
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true      #READ-ONLY
