kubernetes/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nestjs-service
  labels:
    app: nestjs-app
spec:
  type: NodePort
  selector:
    app: nestjs-app
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30001
